--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -12,13 +12,8 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "box-cutter/ubuntu1404-desktop"
-  config.persistent_storage.enabled = true
-  config.persistent_storage.location = "test.vdi"
-  config.persistent_storage.size = 10000
-  config.persistent_storage.mountname = 'test'
-  config.persistent_storage.filesystem = 'ext4'
-  config.persistent_storage.mountpoint = '/test'
+  config.vm.box = "chef/ubuntu-14.04"
+
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
@@ -53,14 +48,15 @@ Vagrant.configure(2) do |config|
     vb.gui = true
 
     # Customize the amount of memory on the VM:
-    vb.memory = "4096"
-    vb.cpus = "2"
+    vb.memory = "32768"
+    vb.cpus = "8"
   end
 
   config.vm.provision "chef_zero" do |chef|
     chef.cookbooks_path = "../cookbooks"
     # chef.nodes_path = "chef/nodes"
     chef.roles_path = "../roles"
+    chef.add_recipe "r::default"
     chef.add_recipe "devbox::default"
     chef.verbose_logging = true
   end
